added new ssh key

--- a/archive/BertBaseUncased.ipynb
+++ b/archive/BertBaseUncased.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Transfer Learning Using BERT\n",
-    "Adapted from [this tutorial](https://towardsdatascience.com/text-classification-with-bert-in-pytorch-887965e5820f) using [bert-base-cased](https://huggingface.co/bert-base-cased). Rather than predicting the masked word in a sentence, the new model predicts the masked label. "
+    "Adapted from [this tutorial](https://towardsdatascience.com/text-classification-with-bert-in-pytorch-887965e5820f) using [bert-base-cased](https://huggingface.co/bert-base-cased). Rather than predicting the masked word in a sentence, the new model predicts the masked label. This was implemented in the hopes that transfer learning would significantly improve modeling outcomes, but performance was on-par with the much more efficient fastText model. Included here only for reference."
    ]
   },
   {
