--- a/3-modeling.ipynb
+++ b/3-modeling.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "8b6d0350-ae3f-440d-a109-6992d5e9e295",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "id": "25db4a8a-409f-48d4-885f-e89cbd2efdf4",
    "metadata": {
     "id": "25db4a8a-409f-48d4-885f-e89cbd2efdf4"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 4,
    "id": "3d3c45cc-19b0-4b69-b474-b2716fee1c5d",
    "metadata": {},
    "outputs": [],
@@ -1127,17 +1127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "ce195618-ffe9-4bd5-aa27-93be7991fa44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((79685, 34), (19865, 32), (11077, 32))"
+       "((79685, 26), (19865, 26), (11077, 26))"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,6 +1353,14 @@
    ],
    "source": [
     "run_fasttext(new_train, new_val, new_test, 'grade_reduced', ['lemmatized_text_combined'], confusion_matrix='val');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcb846b6-faa2-4c4e-9308-a12daeef3571",
+   "metadata": {},
+   "source": [
+    "The validation is basically identical, with the only major shift being that all 5.15 are predicted as 5.10 rather than as 5.13 like they were in the training."
    ]
   },
   {
@@ -1963,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "id": "03aea9fa-eb40-4159-9fb4-dd8f2208202c",
    "metadata": {},
    "outputs": [
@@ -1976,7 +1984,7 @@
        "Name: grade_group, dtype: float64"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,9 +2094,9 @@
    },
    "source": [
     "## Conclusions and Future Work\n",
-    "This dataset proved to be far more tricky to work with than anticipated, especially the deep class imbalances. The intuition I had going into it was that manipulation of the text itself would have noticeable positive effects on the modeling outcomes, but the variety of cleaning methods I tried had essentially no effect. Same for addition of features from other columns within the dataset. The only noteworthy change we saw was when the number of classes was greatly reduced, and this improvement for the most part was an artifact of reducing the amount of \"wrong\" the model could be. The only exception is the final grouping, in which we reduced to 3 groups: easy, intermediate, and difficult. These groupings played to the strength of the model, but also highlight potential clustering we saw during EDA. \n",
+    "This dataset proved to be far more tricky to work with than anticipated, especially the deep class imbalances. The intuition I had going into it was that manipulation of the text itself would have noticeable positive effects on the modeling outcomes, but the variety of cleaning methods I tried had essentially no effect. Same for addition of features from other columns within the dataset. The only noteworthy change we saw was when the number of classes was greatly reduced, and this improvement for the most part was an artifact of reducing the amount of \"wrong\" the model could be. The only exception is the final grouping, in which we reduced to 3 groups: easy, intermediate, and difficult. These groupings played to the strength of the model, while also highlighting potential clustering we saw during EDA. \n",
     "\n",
-    "Ultimately, what this process has shown us is that there is likely no significant difference in the way that routes of different grades are described. However, further exploration and methods should be explored.\n",
+    "Ultimately, what this process has shown us is that there is likely no significant difference in the way that routes of different grades are described. However, further methods should be explored.\n",
     "\n",
     "### Future Work and Other Approaches\n",
     "There are a multitude of other approaches we could take toward this dataset. The number one factor we're missing in this analysis is an investigation into the similarity of the descriptions across grades. In retrospect, this should have been one of the first steps, but the author got too caught up in implementing the various potential models, which ended up being more time-consuming than expected.\n",
@@ -2109,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff41b68d-4307-4788-b770-b47cc5c133dc",
+   "id": "337564eb-0158-4c9f-b9c4-dd65aef37e0f",
    "metadata": {},
    "outputs": [],
    "source": []
