--- a/1-data-collection.ipynb
+++ b/1-data-collection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "283039e3",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d8c1ae2d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d54d8bd0",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "029a6c8d-3cb0-47cd-863d-2b6a1faa060b",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "4      NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,88 +711,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "9abfcffb-d9ad-4760-ad09-04f4dcb5875e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.9        11387\n",
-       "5.8        10392\n",
-       "5.7         8460\n",
-       "5.10a       7703\n",
-       "5.10b       5671\n",
-       "5.11a       5527\n",
-       "5.6         5424\n",
-       "5.10c       4932\n",
-       "5.12a       4328\n",
-       "5.11b       4155\n",
-       "5.10        4015\n",
-       "5.9+        3948\n",
-       "5.10d       3931\n",
-       "5.11c       3538\n",
-       "5.11d       2877\n",
-       "5.12b       2678\n",
-       "5.10+       2657\n",
-       "5.11        2643\n",
-       "5.8+        2556\n",
-       "5.5         2538\n",
-       "5.12c       1881\n",
-       "5.4         1722\n",
-       "5.10-       1721\n",
-       "5.11+       1712\n",
-       "5.11-       1537\n",
-       "5.7+        1493\n",
-       "5.13a       1376\n",
-       "5.12d       1229\n",
-       "5.9-        1221\n",
-       "5.10a/b     1120\n",
-       "5.10b/c     1118\n",
-       "5.12        1018\n",
-       "5.12-        871\n",
-       "5.11b/c      862\n",
-       "5.13b        771\n",
-       "5.8-         767\n",
-       "5.11a/b      732\n",
-       "5.3          731\n",
-       "5.10c/d      709\n",
-       "5.12a/b      579\n",
-       "5.11c/d      531\n",
-       "5.12+        514\n",
-       "5.12b/c      473\n",
-       "5.13c        411\n",
-       "5.2          396\n",
-       "5.13d        270\n",
-       "5.12c/d      258\n",
-       "5.13-        246\n",
-       "5.13         226\n",
-       "5.14a        223\n",
-       "5.0          166\n",
-       "5.13a/b      135\n",
-       "5.1          118\n",
-       "5.13b/c      113\n",
-       "5.13+        109\n",
-       "5.14b         77\n",
-       "5.13c/d       53\n",
-       "5.14-         38\n",
-       "5.14c         35\n",
-       "5.14a/b       21\n",
-       "5.14          20\n",
-       "5.14d         19\n",
-       "5.14b/c        9\n",
-       "5.14+          6\n",
-       "5.14c/d        3\n",
-       "5.15a          2\n",
-       "5.15d          2\n",
-       "5.15+          1\n",
-       "5.15c/d        1\n",
-       "5.15           1\n",
-       "5.15-          1\n",
+       "5.9         11387\n",
+       "5.8         10392\n",
+       "5.7          8460\n",
+       "5.10a        7703\n",
+       "5.10b        5671\n",
+       "5.11a        5527\n",
+       "5.6          5424\n",
+       "5.10c        4932\n",
+       "5.12a        4328\n",
+       "5.11b        4155\n",
+       "5.10         4015\n",
+       "5.9+         3948\n",
+       "5.10d        3931\n",
+       "5.11c        3538\n",
+       "5.11d        2877\n",
+       "5.12b        2678\n",
+       "5.10+        2657\n",
+       "5.11         2643\n",
+       "5.8+         2556\n",
+       "5.5          2538\n",
+       "5.12c        1881\n",
+       "5.4          1722\n",
+       "5.10-        1721\n",
+       "5.11+        1712\n",
+       "5.11-        1537\n",
+       "5.7+         1493\n",
+       "5.13a        1376\n",
+       "5.12d        1229\n",
+       "5.9-         1221\n",
+       "5.10a/b      1120\n",
+       "5.10b/c      1118\n",
+       "5.12         1018\n",
+       "5.12-         871\n",
+       "5.11b/c       862\n",
+       "5.13b         771\n",
+       "5.8-          767\n",
+       "5.11a/b       732\n",
+       "5.3           731\n",
+       "5.10c/d       709\n",
+       "5.12a/b       579\n",
+       "5.11c/d       531\n",
+       "5.12+         514\n",
+       "5.12b/c       473\n",
+       "5.13c         411\n",
+       "5.2           396\n",
+       "4th           295\n",
+       "5.13d         270\n",
+       "Easy 5th      264\n",
+       "5.12c/d       258\n",
+       "5.13-         246\n",
+       "5.13          226\n",
+       "5.14a         223\n",
+       "3rd           219\n",
+       "5.0           166\n",
+       "5.13a/b       135\n",
+       "5.1           118\n",
+       "5.13b/c       113\n",
+       "5.13+         109\n",
+       "5.14b          77\n",
+       "5.13c/d        53\n",
+       "5.14-          38\n",
+       "5.14c          35\n",
+       "5.14a/b        21\n",
+       "5.14           20\n",
+       "5.14d          19\n",
+       "5.14b/c         9\n",
+       "5.14+           6\n",
+       "5.14c/d         3\n",
+       "5.15a           2\n",
+       "5.15d           2\n",
+       "5.15+           1\n",
+       "5.15c/d         1\n",
+       "5.15            1\n",
+       "5.15-           1\n",
        "Name: grade.YDS, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "b55fde52-e71e-45e9-824b-70753f492e91",
    "metadata": {},
    "outputs": [],
@@ -836,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "fe80254f",
    "metadata": {},
    "outputs": [],
@@ -858,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "812e62d1",
    "metadata": {},
    "outputs": [],
@@ -878,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "b20b7317",
    "metadata": {},
    "outputs": [
@@ -893,7 +896,7 @@
        "Name: fa, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "d8217ee7",
    "metadata": {},
    "outputs": [],
@@ -926,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "930767e1",
    "metadata": {},
    "outputs": [
@@ -936,7 +939,7 @@
        "22467"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "id": "a6ade717",
    "metadata": {},
    "outputs": [
@@ -962,7 +965,7 @@
        "Name: year_established, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "id": "9a341d0e",
    "metadata": {},
    "outputs": [],
@@ -1000,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "id": "f26fb110",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1013,7 @@
        "43907"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 26,
    "id": "7d9d9db5",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1039,7 @@
        "Name: year_established, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "id": "b882811c-506f-4a32-9062-ddbb1114dbb3",
    "metadata": {
     "tags": []
@@ -1075,7 +1078,7 @@
        "Name: year_established, dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "id": "6078d031-f45b-440c-bee6-a3633a4da952",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1141,7 @@
        "Name: fa, dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "id": "d4dea752-0b00-4b3c-aaa3-4f59b9f3beb7",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "id": "0ecd0a7b-39e8-440f-a066-6c6ef4da7b75",
    "metadata": {},
    "outputs": [
@@ -1742,7 +1745,7 @@
        "193006            2071.0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "id": "de0e11e0-de0e-45f3-9d91-375c00af9d5b",
    "metadata": {},
    "outputs": [],
@@ -1773,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "id": "2560e75b-a81c-47a8-814f-3cc90f947901",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1826,7 @@
        "64822   Tim Bova and Mike Gray, 11/282020            2720.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "id": "71c5cf4b-13da-414c-b662-612bce2cf40e",
    "metadata": {},
    "outputs": [],
@@ -1866,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "id": "18980c66-e821-4dd5-bd01-83555fad845d",
    "metadata": {},
    "outputs": [],
@@ -1882,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "id": "c4a543cf-b838-4109-9397-f3003baca0bd",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1895,7 @@
        "((127008, 25), (91445, 25), (22862, 25), (12701, 25))"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "id": "a32566f9-10be-47d1-85da-b9205723c751",
    "metadata": {},
    "outputs": [],
