adding create data folder

--- a/1-data-collection.ipynb
+++ b/1-data-collection.ipynb
@@ -1909,6 +1909,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "79fc0751",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a data folder\n",
+    "if not os.path.exists(\"./data\"):\n",
+    "    os.mkdir(\"./data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "id": "a32566f9-10be-47d1-85da-b9205723c751",
    "metadata": {},
