--- a/1-data-collection.ipynb
+++ b/1-data-collection.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Data Concatenation / Initial Cleaning\n",
-    "Used to combine the disparate jsonlines files from [OpenBeta](https://github.com/OpenBeta/climbing-data/tree/next) into one large csv of only non-bouldering routes. This includes transforming the column types to be easier to work with, and creation of numeric grade columns, a date established column, and if the grade has a plus/minus columns. The final dataset is saved to a csv."
+    "Used to combine the disparate jsonlines files from [OpenBeta](https://github.com/OpenBeta/climbing-data/tree/next) into one large csv of only non-bouldering routes. This includes transforming the column types to be easier to work with, and creation of numeric grade columns, a date established column, and if the grade has a plus/minus columns. The final dataset is saved to a csv.\n",
+    "\n",
+    "Be sure to unzip the open-beta-routes.zip before running this notebook."
    ]
   },
   {
